file (GLOB INTERFACE_FILES Interfaces/*.h)
file (GLOB SOURCE_FILES Sources/*.cpp Sources/*.h)

add_library(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} STATIC ${INTERFACE_FILES})
add_library(${ENGINE_PLUGIN_JS_TARGET} MODULE ${SOURCE_FILES})

set_target_properties(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} PROPERTIES LINKER_LANGUAGE CXX)

target_link_libraries(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} PUBLIC ${ENGINE_CORE_LIB_TARGET})
target_link_libraries(${ENGINE_PLUGIN_JS_TARGET} ${ENGINE_PLUGIN_JS_INTERFACE_TARGET} Duktape)

vs_add_to_grp(${ENGINE_PLUGIN_JS_TARGET} "${VS_GRP_ENGINE_PLUGINS}")
vs_add_to_grp(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} "${VS_GRP_ENGINE_PLUGINS}")