file (GLOB INTERFACE_FILES Interfaces/*.h)
file (GLOB SOURCE_FILES Sources/*.cpp Sources/*.h)

add_library(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} INTERFACE ${INTERFACE_FILES})
add_library(${ENGINE_PLUGIN_JS_TARGET} MODULE ${SOURCE_FILES})

add_dependencies(${ENGINE_PLUGIN_JS_TARGET} ${ENGINE_PLUGIN_JS_INTERFACE_TARGET})

set_target_properties(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} PROPERTIES LINKER_LANGUAGE CXX)

target_link_libraries(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} INTERFACE ${ENGINE_CORE_LIB_TARGET} Duktape)
target_link_libraries(${ENGINE_PLUGIN_JS_TARGET} ${ENGINE_PLUGIN_JS_INTERFACE_TARGET})

set(SYMLINK_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
if(WIN32)
    set(SYMLINK_PATH "${SYMLINK_PATH}/$<CONFIG>/${ENGINE_PLUGIN_JS_TARGET}.dll")
elseif(APPLE)
    set(SYMLINK_PATH "${SYMLINK_PATH}/$<CONFIG>/lib${ENGINE_PLUGIN_JS_TARGET}.dylib")
else()
    set(SYMLINK_PATH "${SYMLINK_PATH}/$<CONFIG>/lib${ENGINE_PLUGIN_JS_TARGET}.so")
endif()

add_custom_command(TARGET ${ENGINE_PLUGIN_JS_TARGET} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E create_symlink
        $<TARGET_FILE:${ENGINE_PLUGIN_JS_TARGET}>
        ${SYMLINK_PATH}
    COMMENT "Creating symbolic link for ${ENGINE_PLUGIN_JS_TARGET}"
)

vs_add_to_grp(${ENGINE_PLUGIN_JS_TARGET} "${VS_GRP_ENGINE_PLUGINS}")
vs_add_to_grp(${ENGINE_PLUGIN_JS_INTERFACE_TARGET} "${VS_GRP_ENGINE_PLUGINS}")